# AutonomousRaspRobot

./: .gitignore  README.md
Android/Joystick/app/: build.gradle  proguard-rules.pro
Android/MyApplication/app/: build.gradle
AndroidOLD/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
AndroidOLD/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
AndroidOLD/.metadata/.plugins/org.eclipse.jdt.core/: 3679861299.index  externalLibsTimeStamps  savedIndexNames.txt
AndroidOLD/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
AndroidOLD/.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
AndroidOLD/Joystick/: AndroidManifest.xml
AndroidOLD/Joystick/res/layout/: joystick.xml
AndroidOLD/Joystick/res/values/: strings.xml
Arduino/AutonomousRaspRobotMotorConroller/: AutonomousRaspRobotMotorConroller.ino
DesktopClient/: DesktopClient.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  raspclient.cpp  raspclient.h
DesktopClient-Build/: build.sh
RaspServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
RaspWiring/: CMakeLists.txt  main.cpp  messagequeue.cpp  messagequeue.h
Raspberry/: CMakeLists.txt
Raspberry-Build/: build.sh
Raspberry/RaspMessageQueue/: CMakeLists.txt  messagequeue.cpp  messagequeue.h
Raspberry/RaspOpenCV/: CMakeLists.txt  capture.cpp  capture.cpp~  capture.h  capture.h~  main.cpp  main.cpp~  moviment.cpp  moviment.cpp~  moviment.h  moviment.h~  opencv.cpp  opencv.cpp~  opencv.h  opencv.h~
Raspberry/RaspServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
Raspberry/RaspWiring/: CMakeLists.txt  main.cpp  wiring.cpp  wiring.h
(+29 files in other folders)
